--- a/Front-HTML-CSS/Atividades/Segunda-Atividade/tela3/style.css
+++ b/Front-HTML-CSS/Atividades/Segunda-Atividade/tela3/style.css
@@ -12,7 +12,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    align-items: center;;
+    align-items: center;
 }
 header a{
     color: white;
@@ -28,6 +28,10 @@ ul{
 li{
     width: 80px;
     text-align: center;
+    list-style: none;
+}
+li a{
+    text-decoration: none;
 }
 img{
     max-width: 800px;
